--- a/Css/styles.css
+++ b/Css/styles.css
@@ -144,9 +144,9 @@ img {
 @media screen and (max-width: 1023px){
     .nav__menu {
         position: fixed;
-        top: 0;
+        top: -100%;
         left: 0;
-        background-color: hsl(0, 0, 0, .3);
+        background-color: hsla(0, 0%, 0%, .3);
         width: 100%;
         padding-block: 4rem;
         backdrop-filter: blur(24px);
@@ -173,3 +173,216 @@ img {
     top: 1rem;
     right: 1.5rem;
 }
+
+/* show menu */
+.show-menu {
+    top: 0; 
+}
+
+.blur-header::after {
+    content: '';
+    position: absolute;
+    width: 1000%;
+    height: 100%;
+    background-color: hsla(0, 0%, 0%, 0.3);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px);
+    top: 0;
+    left: 0;
+    z-index: -1 ;
+}
+
+.home {
+    position: relative;   
+}
+
+.home__bg {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 750px;
+object-fit: cover;
+object-position: center;
+}
+
+.home__shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(180deg,
+                hsla(0, 0%, 0%, 0)58%,
+                hsl(0, 0%, 0%)78%);
+}
+
+.home__container {
+    position: relative;
+    padding-top: 3rem;
+    row-gap: 3 rem;
+}
+
+.home__data {
+    text-align: center;
+}
+
+.home__subtittle {
+    font-size: var(--h3-font-size);
+    margin-bottom: .5rem;
+}
+
+.home__tittle {
+    font-size: var(--biggest-font-size);
+    margin-bottom: 1rem;
+}
+
+.home__description {
+    margin-bottom: 2rem;
+    color: var(--tittle-color);
+}
+
+.home__cards {
+    grid-template-columns: 240px;
+    justify-content: center;
+}
+
+.home__card {
+    position: relative;
+    overflow: hidden;
+}
+
+.home__card-img {
+    transition: transform .4s;
+}
+
+.home__card-shadow {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(180deg,
+                hsla(0, 0%, 0%, 0) 50%
+                hsl(0, 0%, 0%) 125%);
+}
+
+.home__card-tittle {
+    position: relative;
+    left: 1rem;
+    bottom: 1rem;
+    font-size: var(--h3-font-size);
+    z-index: 1;
+}
+
+.home__card:hover .home__card-img {
+    transform: scale(1.2);
+}
+
+.button {
+    background-color: hsl(0, 0%, 100%, .2);
+    padding: 1.25rem 1.5rem;
+    color: var(--tittle-color);
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+    font-family: var(--second-font);
+    font-weight: var(--font-semi-bold);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px); /*for safari */
+}
+
+.button i {
+    font-size: 1.25rem;
+    transition: transform .4s;
+    font-weight: initial;
+}
+.button:hover i {
+    transform: translateX(.25rem);
+}
+
+.about__container {
+    row-gap: 3rem;
+}
+
+.about__data {
+    text-align: center;  
+}
+
+.about__description {
+    margin-bottom: 2rem;
+}
+
+.about__image {
+    position: relative;
+    justify-self: center;
+    overflow: hidden;
+}
+
+about__img {
+    width: 300px;
+    transition: transform .4s;
+}
+
+.about__shadow {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 50%,
+                 hsl(0, 0%, 0%) 125%);
+}
+
+.about__image:hover .about__img {
+    transform: scale(1.2);
+}
+
+.popular__container {
+    padding-top: 1.5rem;
+    grid-template-columns: 240px;
+    justify-content: center;
+    row-gap: 2.5rem;   
+}
+
+.popular__image {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 1rem;
+}
+
+.popular-image {
+    transition: transform .4s;
+}
+
+.popular__shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, hsla(0, 0%, 0%, 0)50%
+                            hsl(0, 0%, 0%)125%);
+}
+
+.popular__tittle {
+    font-size: var(--h3-font-size);
+    margin-bottom: .5rem;
+}
+
+.popular__location {
+    display: inline-flex;
+    align-items: center;
+    column-gap: .25rem;
+    font-size: var(--small-font-size);
+    font-family: var(--second-font);
+    font-weight: 500;
+}
+
+.popular__location i {
+    font-size: 1rem;
+}
+
+.popular__image:hover .popular-image {
+    transform: scale(1.2);
+}
+
